# btp-mcp

./: .dockerignore  .env.example  .gitignore  DEPLOY_RENDER.md  Dockerfile  QUICKSTART.md  QUICK_DEPLOY.md  README.md  WEB_UI_README.md  app.py  http_server.py  iflows.json  list_active_flows.py  list_iflows.py  mcp_sse_server.py  pyproject.toml  render.yaml  run_web_ui.py  start_server.py
src/btp_mcp/: __init__.py  client.py  config.py  server.py
templates/: index.html
tests/: test_client.py
