[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btp-mcp"
version = "0.1.0"
description = "Python MCP server for SAP BTP Integration Suite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "fastmcp>=3.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "flask>=2.3.0",
  "anthropic>=0.40.0",
  "uvicorn>=0.29.0",
  "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
btp-mcp = "btp_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
